changed classnames,added final variables